# pilot-usboard

./: CMakeLists.txt  README.md  codegen.sh
include/pilot/usboard/: IndexCollector.h  USBoardModule.h
interface/: USBoardConfig.vni  USBoardData.vni  group_config_t.vni  sensor_config_t.vni
modules/: USBoardModule.vni
src/: USBoardConfig.cpp  USBoardData.cpp  USBoardModule.cpp
